@@ -202,7 +202,7 @@
     <value>'{1}' should hold for {0}</value>
   </data>
   <data name="OtherwiseSpecifiedTypeXIsNotSupported" xml:space="preserve">
-    <value>The specified type {0} is not supported. The type must have a public constructor with a single string argument.</value>
+    <value>The specified type {0} is not supported. The type be concrete and have a public constructor with a single string argument.</value>
   </data>
   <data name="PostconditionFailed" xml:space="preserve">
     <value>Postcondition failed.</value>
